Retrieve schema promotion from kafka topic promotions
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>